deployment/production/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iam-production
spec:
  selector:
    matchLabels:
      app: iam
      env: production
  replicas: 1
  template:
    metadata:
      labels:
        app: iam
        env: production
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/iam:devel
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: rsa
          mountPath: "/app/keys"
          readOnly: true
        - name: prometheus-client
          mountPath: /prometheus-client
        command: ["gunicorn", "-c", "gunicorn.py", "iam.wsgi:app"]
        readinessProbe:
          httpGet:
            path: /iam/healthz
            port: 8000
          initialDelaySeconds: 5
        resources:
          requests:
            cpu: "10m"
          limits:
            cpu: "2000m"
      volumes:
      - name: rsa
        secret:
          secretName: iam-rsa-production
      - name: prometheus-client
        emptyDir: {}
