deployment/production/service.yml
kind: Service
apiVersion: v1
metadata:
  name: iam-production
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
    prometheus.io/path: "/iam/metrics"
spec:
  selector:
    app: iam
    env: production
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 8000
